# DbHandlerPrototype

./: CMakeLists.txt  README.md  concretelogger.cpp  concretelogger.h  dbmanager.h  main.cpp  record.h  session.h
sql/: sqler.h  sqlpgrs.cpp  sqlpgrs.h  sqlsqlite.cpp  sqlsqlite.h  sqlsqlitev.cpp  sqlsqlitev.h
